deletion of geometries

--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-county/popup-control-county.component.html
@@ -16,13 +16,13 @@
         </td>
         <td class="col-content" *ngIf="validEdit" >
             <button class="button-event" (click)="connectFeatureFromCounty()">
-                <mat-icon >home</mat-icon> 
+                <mat-icon >pageview</mat-icon> 
                 Visualizar 
             </button>
         </td>
         <td class="col-content" *ngIf="validSave" >
         <button class="button-event" (click)="connectFeatureFromCounty()">
-            <mat-icon >home</mat-icon> 
+            <mat-icon >add</mat-icon> 
             Adicionar 
         </button>
         </td>
