--- a/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-infrastructure/popup-control-infrastructure.component.html
+++ b/frontendSIGUI/src/app/components/maps-components/map-interations-components/popup-control/popup-control-infrastructure/popup-control-infrastructure.component.html
@@ -9,7 +9,7 @@
     <tr class="controls"> 
         <td class="col-header"></td>
         <td class="col-content">
-        <button mat-icon-button color="primary">
+        <button mat-icon-button color="primary" (click)="excludeFeature()">
             <mat-icon>delete</mat-icon>
         </button>    
         </td>
@@ -27,13 +27,13 @@
         </td>
         <td class="col-content" *ngIf="validEdit" >
             <button class="button-event" (click)="connectFeatureFromInfrastructure()">
-            <mat-icon >home</mat-icon> 
+            <mat-icon >pageview</mat-icon> 
                 Visualizar 
             </button>
         </td>
         <td class="col-content" *ngIf="validSave">
             <button class="button-event" (click)="connectFeatureFromInfrastructure()">
-            <mat-icon >home</mat-icon> 
+            <mat-icon >add</mat-icon> 
                 Adicionar 
             </button>
         </td>
