restructuring of in-memory storage to tree

--- a/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-infrastructure/manipulate-infrastructure.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/geo-elements/manipulates/manipulate-infrastructure/manipulate-infrastructure.component.html
@@ -27,7 +27,7 @@
             </button>   
         </div>
         <div class="button-colum">
-            <button mat-flat-button type="button" class="button-control-data" color="primary" (click)="addLayerVetorMunicipios()"> 
+            <button mat-flat-button type="button" class="button-control-data" color="primary" (click)="addLayerVetores()"> 
                 <mat-icon >home</mat-icon><br> 
                 <span>Buscar Infraestrutura</span>           
             </button> 
