nova visualização de dados

--- a/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-unit/container-unit.component.html
+++ b/frontendSIGUI/src/app/components/angular-components/geodata/containers/container-unit/container-unit.component.html
@@ -4,6 +4,6 @@
     </div>
     <!-- managerVizualizaton.session_county -->
     <div class="container" *ngIf="viewData">          
-        <app-table-unit [data]="data" ></app-table-unit>
+        <app-table-unit style="max-width: 100%;" [data]="data" ></app-table-unit>
     </div>   
 </div>
